# using_netcdf

./: .travis.yml  Makefile.am  README.md  configure.ac  test-driver-verbose
GOES/: Makefile.am
GOES/GOES-17/: Makefile.am
GOES/GOES-17/GLM/: Makefile.am  get_data.sh  glm_data.h  glm_read.c  goes_glm.h  ncdump.out  tst_glm.sh  tst_glm_ncgen_write.c  tst_glm_read.c  tst_utils.c  un_glm_data.h  un_test.h
GOES/GOES-17/GLM/src/: Makefile.am  glm_data.h  glm_read.c  goes_glm.h
GOES/GOES-17/GLM/test/: Makefile.am  run_glm_tests.sh  tst_glm_read_arrays.c  tst_utils.c  un_test.h
Performance/: fill_values.c  fill_values.py
python/: goes16_LST.py
