# This is the main automake file for the Using NetCDF sample code.

# Ed Hartnett 10/10/2019
# Amsterdam

# This directory stores libtool macros, put there by aclocal.
ACLOCAL_AMFLAGS = -I m4

# Make targets will be run in each subdirectory. Order is significant.
SUBDIRS = GOES

# Include this file in distribution.
EXTRA_DIST = test-driver-verbose
