# This is an automake file for the Using NetCDF sample code for the
# Geostationary Lightning Mapper (GLM).

# Ed Hartnett 10/10/2019
# Amsterdam

# This is a libtool library.
lib_LTLIBRARIES = libgoesglm.la
libgoesglm_la_LDFLAGS = -version-info 0:0:0
libgoesglm_la_SOURCES = glm_read.c goes_glm.h glm_data.h

